--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,3 +8,38 @@
 h1 {
     color: rgb(151, 56, 56);
 }
+
+.navbar {
+  color: red;
+  box-sizing: border-box;
+  flex-flow: row;
+  padding: 70px;
+  margin: 50px;
+  margin: 0;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: var(--color-secundario);
+  padding: 0.9rem 1.2rem;
+  position: relative;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+.navbar__title {
+    text-align: center;
+}
+.navbar__inner {
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+.navbar__brand {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  position: relative;
+  flex-wrap: wrap;
+}
