--- a/styles/main.css
+++ b/styles/main.css
@@ -2,5 +2,5 @@
 @import url(./base.css);
 @import url(./variables.css);
 @import url(./cuerpo.css);
-@import url(./cards.css);
-@import url(./footer.css);
+/* @import url(./cards.css); */
+/* @import url(./footer.css); */
