--- a/styles/cuerpo.css
+++ b/styles/cuerpo.css
@@ -42,64 +42,25 @@ h1 {
   margin-bottom: 10px;
 }
 
-
-/* ======================================================= */
-
-.casa {
-    padding: 0px 15px 15px 15px;
-    border-radius: 12px;
-    margin-bottom: 25px;
-    color: #000;
-}
-
-/* Colores característicos */
-.casa.Gryffindor {
-    border-left: 10px solid #7F0909;
-    background: rgb(238, 186, 48);
-
-}
-
-.casa.Slytherin {
-    border-left: 10px solid #1A472A;
-    background: #AAAAAA;
-}
-
-.casa.Ravenclaw {
-    border-left: 10px solid #0E1A40;
-    background: #946B2D;
-}
-
-.casa.Hufflepuff {
-    border-left: 10px solid #372E29;
-    background: #F0C75E;
-}
-
-/* Grilla de cards */
-.grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-    gap: 15px;
-}
-
-.card-casa {
-    background: white;
-    border-radius: 10px;
-    overflow: hidden;
-    padding-bottom: 10px;
-    text-align: center;
-}
-
-.card-casa img {
+.footer {
   width: 100%;
-  height: 260px;
-  object-fit: cover;
-  border-radius: 6px;
-  margin-bottom: 10px;
+  padding: 15px 0;
+  text-align: center;
+  background-color: #1a1a1a;
+  color: #f0f0f0;
+  margin-top: 40px;
+  letter-spacing: 0.5px;
+  border-top: 1px solid;
 }
 
-#contenedor-casas {
-    margin: 0px 30px;
+.footer p {
+  margin: 0;
 }
+
+
+/* ======== MODAL PARA MOSTRAR LOS PERSONAJES FAVORITOS =============== */
+
+
 .modal {
   display: none;
   position: fixed;
